force-app/main/default/objects/PricebookEntry/fields/CPQ2_Cost_Variance__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Cost_Variance__c</fullName>
    <label>Cost Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>