force-app/main/default/objects/PricebookEntry/fields/CPQ2_Margin_Threshold_2__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Margin_Threshold_2__c</fullName>
    <label>Margin Threshold Level 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>