force-app/main/default/objects/PricebookEntry/fields/CPQ2_Replacement_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Replacement_Price__c</fullName>
    <label>Replacement Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>