force-app/main/default/objects/PricebookEntry/fields/CPQ2_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Total_Cost__c</fullName>
    <formula>CPQ2_Vendor_Contract_Cost__c +  CPQ2_Cost_Variance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>