force-app/main/default/objects/PricebookEntry/fields/CPQ2_Vendor_Contract_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Vendor_Contract_Cost__c</fullName>
    <label>Vendor Contract - Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>