force-app/main/default/objects/PricebookEntry/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>Text(Product2.Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language</label>
    <type>Text</type>
</CustomField>