force-app/main/default/objects/PricebookEntry/fields/Service_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Unit_Price__c</fullName>
    <label>Service Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>